# Distrubted-AI

./: .gitignore  RAGV2.ipynb  main.py  pyproject.toml  sma.ipynb
Desktop/SMA-LNACHAIN-BDCC/: langchain_langgraph_V2.ipynb  main.py  pyproject.toml
store/: chroma.sqlite3
